motion tracking "weight" atribute ignores animation keyframes or reports ID error when working with objects #46687

Closed
opened 2015-11-03 22:11:45 +01:00 by Rafael Chacon Bustamante · 9 comments

System Information
os x yosemite
ATI Radeon HD 5770 1024 MB

Blender Version
Broken: (2.76 48f7dd6)
Worked: (impossible to open 2.70 when the feature was added,)

Short description of error

the weight option in the track panel of the motion tracking interface can't be animated for object solving (works just fine for camera), even if it accepts keyframes the input values overwrites all other previously assigned

Exact steps for others to reproduce the error
open blender
go to the motion tracking interface
track and solve the camera and create a new object to be tracked
add a tracking point and track a little segment
insert a keyframe to the weight value ( in the track panel to the rigth) at the start of the tracking segment, and insert a diferent keyframe value at the end

the second value overwrites the first,
i find the problem while working on a scene and the attached image text error appears but cant reproduce this in specific

Screen Shot 2015-11-03 at 1.54.01 PM.png
object tracking error.zip

**System Information** os x yosemite ATI Radeon HD 5770 1024 MB **Blender Version** Broken: (2.76 48f7dd6) Worked: (impossible to open 2.70 when the feature was added,) **Short description of error** the weight option in the track panel of the motion tracking interface can't be animated for object solving (works just fine for camera), even if it accepts keyframes the input values overwrites all other previously assigned **Exact steps for others to reproduce the error** open blender go to the motion tracking interface track and solve the camera and create a new object to be tracked add a tracking point and track a little segment insert a keyframe to the weight value ( in the track panel to the rigth) at the start of the tracking segment, and insert a diferent keyframe value at the end the second value overwrites the first, i find the problem while working on a scene and the attached image text error appears but cant reproduce this in specific ![Screen Shot 2015-11-03 at 1.54.01 PM.png](https://archive.blender.org/developer/F250618/Screen_Shot_2015-11-03_at_1.54.01_PM.png) [object tracking error.zip](https://archive.blender.org/developer/F250623/object_tracking_error.zip)

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @RafaelChacon-3

Added subscriber: @RafaelChacon-3

#46669 was marked as duplicate of this issue

#46669 was marked as duplicate of this issue

Added subscriber: @Sergey

Added subscriber: @Sergey

There is no reason to create new report after extra information was requested. You can put information in the comments to the bug report easily.

There is no reason to create new report after extra information was requested. You can put information in the comments to the bug report easily.
Sergey Sharybin self-assigned this 2015-11-04 11:47:04 +01:00

Now can see the issue. Will have a look.

Now can see the issue. Will have a look.

This issue was referenced by 321a609caa

This issue was referenced by 321a609caa3c78f3c0fb14f6eae9d9f4c8e1b8a7

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

thanks , I'll be using the tracker intensely for a few weeks of work , it's great to have help so quickly

thanks , I'll be using the tracker intensely for a few weeks of work , it's great to have help so quickly
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#46687
No description provided.