Fix T46687: Animating tracks properties from objects didn't use proper path